{
    "name": "ActionMaps",
    "maps": [
        {
            "name": "Main",
            "id": "80580333-e349-4c5a-b40b-832b6e6e9a07",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "b2c658ca-c3ef-481b-ab18-f76a65f2cc91",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerClick",
                    "type": "PassThrough",
                    "id": "aa100ff9-72f3-4a1a-8fbe-4b7f7405d894",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4be2592b-96ad-4635-b2a8-a41ef553b854",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02069b0f-9258-4e5a-8c52-55235a5bfd70",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54d6e5be-0250-481e-906e-1f0f1eb53b83",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48df2a23-875e-40ff-b145-fa67905ef00a",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}